Issue #139 Bug          - SSLv3 POODLE Vulnerability
Issue #138 Enhancement  - Maximum Processing Attempts Database Adjustments
Issue #141 Enhancement  - Exclude Whitelisted Emails from Report as Spam Link
Issue #145 Bug          - Modify Domain TLD Constraint
Issue #147 Bug          - Message Learn/Release Rejecting 8 digit ID prefix

############################################################
EFA Version 3.0.0.6 Changes
############################################################

Issue #127  Bug			- Greylisting not toggling on 3.0.0.5
Issue #129	Enhancement	- Increase max spam check size to 2 MB
Issue #130  Bug         - Quarantine report problems after 3.0.0.5 upgrade
Issue #131  Bug         - Undefined index %orgname%

Mailwatch updated to snapshot 7f6858df83

############################################################
EFA Version 3.0.0.5 Changes
############################################################
Issue #33  Enhancement  - Remove software versions page from mailwatch
Issue #51  Enhancement  - Redundant Quarantine Clean Scripts Present
Issue #54  Enhancement  - Added hostname change to EFA-Configure
Issue #57  Enhancement  - Alternating background for black/whitelist
Issue #66  Enhancement  - Pull passwords from /etc/EFA-Config where practical
Issue #67  Enhancement  - ImageCeberus default score
Issue #69  Bug          - Filter out reserved words from user account creation 
Issue #70  Enhancement  - .bashrc EFA-Configure Launch Interactive Only
Issue #71  Bug          - Urgent: raw.github.com certificate error fixes
Issue #73  Bug          - Admin Email Change Fails to Update MailScanner Values
Issue #74  Bug          - EFA-Configure Disable SSL does not disable redirect
Issue #75  Bug          - EFA-Configure not writing iptables config to /etc/sysconfig/iptables
Issue #76  Bug          - Processing Attempts Database Bug (temporarily disabled until MailScanner releases fix)